# wahoo-systm-mcp

./: .dockerignore  .env.example  .gitignore  .mcpbignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  justfile  manifest.json  package-lock.json  package.json  prek.toml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yaml  feature.yaml  main.yaml  release.yml
docs/: wahoo-graphql-spec.md
src/: calendar.ts  client.ts  index.ts  onepassword.ts  profile.ts  schemas.ts  types.ts  wahoo-client.ts  workouts.ts
src/test/: calendar.test.ts  client.test.ts  integration.test.ts  onepassword.test.ts  profile.test.ts  setup.ts  wahoo-client.test.ts  workouts.test.ts
src/wahoo_systm_mcp/: __init__.py  __main__.py  client.py  main.py  models.py  onepassword.py  server.py  types.py
src/wahoo_systm_mcp/client/: __init__.py  api.py  config.py  models.py  queries.py
src/wahoo_systm_mcp/server/: __init__.py  app.py  config.py  lifecycle.py  register.py
src/wahoo_systm_mcp/tools/: __init__.py  calendar.py  library.py  profile.py
tests/: __init__.py  conftest.py  test_client.py  test_entrypoints.py  test_integration.py  test_models.py  test_onepassword.py  test_server.py
