[project]
name = "wahoo-systm-mcp"
dynamic = ["version"]
description = "MCP server for Wahoo SYSTM workout platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Joao Pereira" }]
keywords = ["mcp", "wahoo", "systm", "workout", "cycling", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.0.0b1,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wahoo_systm_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wahoo_systm_mcp"]
include = ["src/wahoo_systm_mcp/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["wahoo_systm_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["wahoo_systm_mcp"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src/wahoo_systm_mcp --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/wahoo_systm_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=6.3.0,<7.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
]
