[project]
name = "wahoo-systm-mcp"
version = "1.0.0"
description = "MCP server for Wahoo SYSTM workout platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Joao Pereira" }]
keywords = ["mcp", "wahoo", "systm", "workout", "cycling", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=3.0.0b1,<4.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
]

[project.scripts]
wahoo-systm-mcp = "wahoo_systm_mcp.__main__:main"
wahoo-systm-mcp-server = "wahoo_systm_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wahoo_systm_mcp"]
include = ["src/wahoo_systm_mcp/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["wahoo_systm_mcp"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["wahoo_systm_mcp"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--import-mode=importlib --cov=src/wahoo_systm_mcp --cov-report=term-missing --cov-fail-under=80 -m 'not integration'"
markers = ["integration: tests requiring real Wahoo SYSTM API credentials"]

[tool.coverage.run]
source = ["src/wahoo_systm_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.semantic_release]
commit_message = "chore(release): {version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["manifest.json:version"]
build_command = "uv lock --upgrade-package wahoo-systm-mcp"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.14.14,<1.0.0",
    "mypy>=1.19.1,<2.0.0",
]
